# ultra-faucet

./: README.md
backend/: .gitignore  example.config.json  package-lock.json  package.json  tsconfig.json
backend/src/: ApiServer.ts  functions.ts  index.ts  interfaces.ts
backend/src/modules/: ultra.ts
backend/src/services/: account-creation.ts  faucet.ts
backend/types/fastify/: index.d.ts
contracts/faucetsadmin/: CMakeLists.txt  README.txt
contracts/faucetsadmin/include/: faucetsadmin.hpp
contracts/faucetsadmin/ricardian/: faucetsadmin.contracts.md
contracts/faucetsadmin/src/: CMakeLists.txt  faucetsadmin.cpp
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss  theme.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/services/: api.service.ts  apiservice.spec.ts
